feat: inicia funcoes de edicao das telas

--- a/Estacione2/src/main/java/br/edu/ifsul/cc/lpoo/estacione/view/ListagemVagas.form
+++ b/Estacione2/src/main/java/br/edu/ifsul/cc/lpoo/estacione/view/ListagemVagas.form
@@ -34,9 +34,11 @@
                   <Component id="jScrollPane1" alignment="1" max="32767" attributes="0"/>
                   <Group type="102" alignment="1" attributes="0">
                       <Component id="adicionarVaga" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="77" max="-2" attributes="0"/>
-                      <Component id="removerVaga" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="32767" attributes="0"/>
+                      <Component id="btEditar" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
+                      <Component id="removerVaga" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="36" max="-2" attributes="0"/>
                       <Component id="voltar" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -56,6 +58,7 @@
                   <Component id="voltar" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="adicionarVaga" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="removerVaga" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="btEditar" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -109,6 +112,14 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="removerVagaActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="btEditar">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Editar"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btEditarActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
